fix spacing css on preview page

--- a/docassemble/MOHUDEvictionProject/data/static/custom.css
+++ b/docassemble/MOHUDEvictionProject/data/static/custom.css
@@ -20,3 +20,8 @@
 .fa-circle-question{
  color : #007cff
 }
+
+.da-subquestion,h3 {
+  margin-bottom : 27px;
+  margin-top : 10px;
+}
